infrastructure/manifests/book_catalog_app.yaml
# --- 5. Deployment da Aplicação (Book Catalog) ---
# Define como executar o pod da sua aplicação.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-catalog-app
  namespace: default
spec:
  replicas: 1 # Você pode escalar isso mais tarde
  selector:
    matchLabels:
      app: book-catalog-app
  template:
    metadata:
      labels:
        app: book-catalog-app
    spec:
      containers:
      - name: app
        # IMPORTANTE: Esta imagem deve existir em um registry (Docker Hub, GCR, etc)
        # O K8s não faz 'build' como o docker-compose.
        image: 213504933493.dkr.ecr.us-east-1.amazonaws.com/book_catalog:latest
        command: ["./entrypoint.sh"]
        ports:
        - containerPort: 8000
