infrastructure/manifests/book_catalog_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-catalog-app-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8000"
spec:
  type: LoadBalancer
  selector:
    app: book-catalog-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
