infrastructure/manifests/ingress.yaml
# salve como argocd-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-public
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # <<< SUBSTITUA PELO NOME REAL DO SERVICE
                name: argo-cd-argocd-server
                port:
                  number: 80
